Fixed alignment

--- a/robotmoderationcss.css
+++ b/robotmoderationcss.css
@@ -3,6 +3,6 @@
 	color: rgb(255,0,0);
 }
 .paragraphs{
-	text-align: left;
+	text-align: center;
 	color: rgb(255,0,0);
 }
